# csound-lsp

./: .gitmodules  README.md  main.py  pyproject.toml
src/csound_lsp/: cli.py  lsp.py  parser.py
test/csound_examples/: test.orc
